# open-dealiasing-algorithms

./: .gitignore  Cargo.toml  EVALUATION.md  MERGE_MAP.md  README.md  REPO_SELECTION.md  pyproject.toml  requirements.txt  setup.py
docs/: algorithm-taxonomy.md  app-comparison-framework.md  bibliography.md  implementation-notes.md  likely_papers_from_uploads.md  paper_map.md  test-cases.md
examples/: README.md  archive_frame_algorithm_collage.py  archive_tornado_collage.py  archive_velocity_timeseries.py  benchmark_support.py  js_demo.mjs  klot_same_scan_benchmark.py  moore_fullscan_speed_report.py  nexrad_level2_demo.py  python_demo.py  region_variational_migration_benchmark.py  synthetic_1d_demo.py  synthetic_2d_demo.py  synthetic_temporal_demo.py
js/: open_dealias.test.mjs  open_dealias.test.ts  open_dealias.ts  open_dealias_wasm.test.ts  open_dealias_wasm.ts  package-lock.json  package.json  profile_fastpath.mjs  tsconfig.json
open_dealias/: __init__.py  _core.py  _rust_bridge.py  continuity.py  dual_prf.py  fourdd.py  ml.py  multipass.py  nexrad.py  palette.py  qc.py  recursive.py  region_graph.py  result_state.py  synthetic.py  types.py  vad.py  variational.py  volume3d.py
rust/open_dealias_py/: Cargo.toml
rust/open_dealias_py/src/: common.rs  core_ops.rs  lib.rs  ml.rs  qc.rs  sweep.rs  temporal.rs
rust/open_dealias_wasm/: Cargo.toml
rust/open_dealias_wasm/src/: common.rs  core_ops.rs  lib.rs  sweep.rs  temporal.rs
tests/: test_benchmark_support.py  test_dualprf_volume3d.py  test_fourdd_rust.py  test_ml_rust.py  test_nexrad_helpers.py  test_open_dealias.py  test_qc_variational_ml.py  test_reference_scenarios.py  test_region_graph_recursive.py  test_region_variational_migration.py  test_result_state.py  test_rust_core.py  (+1 more)
(+4 files in other folders)
